Face Set From Visible not working correctly with Multires #76776

Closed
opened 2020-05-15 08:27:14 +02:00 by TheRedWaxPolice · 5 comments

System Information
Operating system: Win 10

Blender Version
Broken: blender-2.90-c880e54a95dd-windows64
Worked: ?

Short description of error
The "Face Set From Visible" command is not working correctly when you have Multires subdivisions,
If you hide part of the mesh, using the Box Hide tool, and then choose "Face Set From Visible", it will create a face set for the entire mesh, including the hidden part, instead of just the visible part.
Without Multires subdivisions it works as expected.

Exact steps for others to reproduce the error

  • File -> New -> Sculpting
  • Add a Multires modifier
  • Hit Subdivide once
  • Choose the Box Hide tool
  • Hide part of the mesh
  • Go to "Face Sets" menu and choose "Face Set From Visible"
  • Unhide the rest of the mesh
  • The face set was created for everything, instead of just the visible part

2020-05-15_06-53-36.mp4

**System Information** Operating system: Win 10 **Blender Version** Broken: blender-2.90-c880e54a95dd-windows64 Worked: ? **Short description of error** The "Face Set From Visible" command is not working correctly when you have Multires subdivisions, If you hide part of the mesh, using the Box Hide tool, and then choose "Face Set From Visible", it will create a face set for the entire mesh, including the hidden part, instead of just the visible part. Without Multires subdivisions it works as expected. **Exact steps for others to reproduce the error** - File -> New -> Sculpting - Add a Multires modifier - Hit Subdivide once - Choose the Box Hide tool - Hide part of the mesh - Go to "Face Sets" menu and choose "Face Set From Visible" - Unhide the rest of the mesh - The face set was created for everything, instead of just the visible part [2020-05-15_06-53-36.mp4](https://archive.blender.org/developer/F8536604/2020-05-15_06-53-36.mp4)

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Pablo Dobarro self-assigned this 2020-05-15 16:37:23 +02:00

This issue was referenced by 85098bdb89

This issue was referenced by 85098bdb89495896a22bb1739cbe2af1d8343d59
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76776
No description provided.